feat: fix lôiix